--- a/package.json
+++ b/package.json
@@ -9,13 +9,28 @@
   },
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "@ant-design/icons": "^4.3.0",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.6.0",
+    "@types/jest": "^26.0.19",
+    "@types/node": "^12.19.9",
+    "@types/react": "^16.14.2",
+    "@types/react-dom": "^16.9.10",
+    "antd": "^4.9.4",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.1",
+    "redux": "^4.0.5",
+    "typescript": "^4.5.4",
+    "web-vitals": "^0.2.4",
+    "vite": "^2.9.0",
+    "@vitejs/plugin-react": "^1.0.7"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
-    "@vitejs/plugin-react": "^1.0.7",
-    "typescript": "^4.5.4",
-    "vite": "^2.9.0"
+    "@types/react-router-dom": "^5.1.7",
+    "typescript-plugin-css-modules": "^3.0.1"
   }
 }
